Can't activate feature with all caps tag via font-feature-settings https://bugs.webkit.org/show_bug.cgi?id=254146 rdar://106966601

Reviewed by Tim Nguyen.

The CSS spec[1] says:

> The <string> is a case-sensitive OpenType feature tag.

Chrome and Firefox both treat it this way.

[1] http://w3c.github.io/csswg-drafts/css-fonts-4/#font-feature-settings-prop

Test: fast/text/font-feature-settings-case-sensitive.html

* LayoutTests/fast/text/font-feature-settings-case-sensitive-expected.html: Added.
* LayoutTests/fast/text/font-feature-settings-case-sensitive.html: Added.
* LayoutTests/fast/text/resources/Ahem-feature-x-left-spacing.otf: Added.
* Source/WebCore/css/parser/CSSPropertyParserWorkerSafe.cpp:
(WebCore::CSSPropertyParserHelpersWorkerSafe::consumeFontTag):
(WebCore::CSSPropertyParserHelpersWorkerSafe::consumeFeatureTagValue):

Canonical link: https://commits.webkit.org/262463@main