Source/WebCore/css/parser/CSSPropertyParserWorkerSafe.cpp
@@ -536,8 +536,6 @@ RefPtr<CSSValueList> consumeFontFaceUnicodeRange(CSSParserTokenRange& range)
     return CSSValueList::createCommaSeparated(WTFMove(values));
 }
 
-enum class FontTagCaseManipulation : bool { None, ToASCIILower };
-template<FontTagCaseManipulation caseManipulation = FontTagCaseManipulation::None>
 static std::optional<FontTag> consumeFontTag(CSSParserTokenRange& range)
 {
     FontTag tag;
@@ -554,10 +552,7 @@ static std::optional<FontTag> consumeFontTag(CSSParserTokenRange& range)
         if (character < 0x20 || character > 0x7E)
             return std::nullopt;
 
-        if constexpr (caseManipulation == FontTagCaseManipulation::ToASCIILower)
-            tag[i] = toASCIILower(character);
-        else
-            tag[i] = character;
+        tag[i] = character;
     }
 
     range.consumeIncludingWhitespace();
@@ -571,7 +566,7 @@ RefPtr<CSSValue> consumeFeatureTagValue(CSSParserTokenRange& range)
 
     // FIXME: The specification states "The <string> is a case-sensitive OpenType feature tag."
     // so we probably should not be lowercasing it at parse time.
-    auto tag = consumeFontTag<FontTagCaseManipulation::ToASCIILower>(range);
+    auto tag = consumeFontTag(range);
     if (!tag)
         return nullptr;
 
